3.0.1 2012-??-??
ChangeLog
========
 * fixed #290: workaround phpize vs fbsd make bug again

3.0.0 2012-10-29
API Changes
========
 * chg: proto array xcache_clear_cache(int type, [ int id = -1 ]). -1 means all cache splits
 * new: proto array xcache_enable_cache(int type, [ int id = -1, [ bool enable = true ] ])
 * new: proto array xcache_admin_namespace()
 * new: proto array xcache_set_namespace(string namespace)

Ini Settings Changes
========
 * new: xcache.disable_on_crash = Off
 * new: xcache.coverager_autostart = On
 * new: xcache.allocator = bestfit (no other option value yet)
 * new: xcache.var_allocator = bestfit (no other option value yet)

ChangeLog
========
 * closes #2: auto disable caching on crash
 * closes #73: warn for improper PHP_FCGI_CHILDREN setting fcgi mode (>=PHP_5_3)
 * closes #174: updates api to support "clear all cache"
 * closes #198: support for caching protocol url
 * closes #287: namespace support
 * fixes #39: ini_set never work for xcache.coverager setting. use API instead
 * code refactor
   * uses extension= to load XCache. loading via zend_extension= is unsupported
   * split XCache features into multiple sub modules
 * updates XCache admin page
 * adds an diagnosis module to give professional advise, accessable via htdocs pages
 * cache can be enabled/disabled manually

2.0.1 2012-07-14
ChangeLog
========
 * fixed #279: segv when cache is full (since 2.0)
 * fixed #281: subsequenc request segv when timeout happens during compiling
 * admin/ config changed. please update accordingly
 * WIN32: kill invalidate CRT parameters on shutdown
 * fixed: <=PHP_5_2 duplicate error message failed to include file
 * fixed #283: XCache admin APIs (admin page) cause SEGV if XCache failed to initize
 * fixed possible re-include a file by mixing include/include_once
 * fixed #264, #284: __FILE__ __DIR__ handling for moved/hardlinked files (set "xcache.experimental = on" to eanble this fix)

2.0.0 2012-04-20
Ini Settings Changes
========