@@ -2,6 +2,7 @@
 ChangeLog
 ========
  * fixed #290: workaround phpize vs fbsd make bug again
+ * compatible with "the ionCube PHP Loader"
 
 3.0.0 2012-10-29
 API Changes
